Applying flex direction using row and row-reverse

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern Web Layout with Flexbox and CSS Grid</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-  
+  <div class="hero-container">
+    <div class="homepage-slider">
+      <img src="https://via.placeholder.com/800x600" alt="homepage slider image" />
+    </div>
+    <div class="flex-container">
+      <div class="flex-item">
+        Flex Item<br />01
+      </div>
+      <div class="flex-item">
+        Flex Item<br />02
+      </div>
+      <div class="flex-item">
+        Flex Item<br />03
+      </div>
+    </div>
+  </div>
 </body>
 </html>
