--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
       <div class="flex-item">
         Flex Item<br />03
       </div>
+      <div class="flex-item">
+        Flex Item<br />04
+      </div>
+      <div class="flex-item">
+        Flex Item<br />05
+      </div>
+      <div class="flex-item">
+        Flex Item<br />06
+      </div>
+      <div class="flex-item">
+        Flex Item<br />07
+      </div>
+      <div class="flex-item">
+        Flex Item<br />08
+      </div>
     </div>
   </div>
 </body>
