--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="flex-item">
         Flex Item<br />02
       </div>
-      <div class="flex-item">
+      <!-- <div class="flex-item">
         Flex Item<br />03
       </div>
       <div class="flex-item">
@@ -36,7 +36,7 @@
       </div>
       <div class="flex-item">
         Flex Item<br />08
-      </div>
+      </div> -->
     </div>
   </div>
 </body>
